v0.12
	* FIX : make the heading appear in the satellite tracker
	* ADD : nice satellite strength view widget
	* FIX : OSM export doesn't handle quotes well (Fixes #1139)
	* ADD : Allow osm API url in the "Use OSM link" text box
	* FIX : 'Download more' should work without prior 'Download from web' (Closes #1028)
	* FIX : Joining roads by moving a node from one road on top of another road gives incorrect node sequence (Fixes #1149)
	* ADD : preliminary gpsd supprt
	* FIX : Upload of a modified single GPX track node was not working anymore (fixes #1141)
	* ADD : Support for GeoTagged images. qmake GEOIMAGE=1 to activate. requires exiv2 (by Timo Schlüßler)
	* ADD : Move to the next field on enter in properties dock tags (by Travers Carter) (Refs #1137)
	* ADD : revised OSB format. Allows to use large map files directly from disk with low memory footprint.
	* FIX : Native render doesn't render anything at high lat/long values(by Travers Carter)  (Closes #1135)
	* FIX : Expand tables in the properties dock to the available width by default (by Travers Carter) (Closes #1136)
	* FIX : make download dialog a less cluttered
	* FIX : update the "created_by" tag at each update, not only add.
	* ADD : Check if there are empty roads/relations during a download and propose to mark them for deletion
	* ADD : "visible" action in layers menu
	* FIX : properly detect if roads are breakable/joinable and update menus accordingly
	* FIX : Handle "NotYetDownloaded" for Relations
	* ADD : scalable POI icons in styles
	* ADD : +/- buttons on zooming slippy map so single button devices can use it too
	* FIX : only activate upload menu when there is something to upload
	* ADD : ability to use svg for node icons
	* ADD : tab filtering and color code to Layer dock
	* FIX : manage road conflicts from downloads
	* ADD : continue road if selected node belongs to only 1 road and is at one end
	* ADD : MRU for opened and imported files